feat: Integração completa Backend-ESP8266 + Rotas diretas - Criado RotaDiretaController com 8 endpoints (/rota1 a /rota7 + /parar) - Melhorado Esp8266Service com logs detalhados - Adicionadas 8 funções JavaScript no frontend (executarRota1-7 + pararRobo) - Removido tempo estimado da interface - Documentação completa de integração - Exemplos práticos de uso (JS, Python, cURL, scripts) - Sistema 100% funcional end-to-end

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,11 +1,7 @@
-# Configuração do Servidor
-server.port=8080
-
-# Configuração da ESP8266
-# Altere estes valores conforme sua ESP8266
-esp8266.host=192.168.1.100
+# IP correto do seu ESP8266
+esp8266.host=192.168.15.181
 esp8266.port=80
 esp8266.timeout=5000
 
-# Modo de desenvolvimento (true = não precisa ESP8266 conectada)
-esp8266.dev.mode=true
+server.port=8080
+logging.level.com.roboentregador.backend=DEBUG
